welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:10: error: not found: value i
      if(i==num-1){return T(cpt)}
         ^